--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "Backend da aplicação",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "nodemon src/index.js"
   },
   "keywords": [],
@@ -14,6 +14,8 @@
     "celebrate": "^12.0.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "jest": "^25.2.7",
+    "joi-phone-validator": "^1.0.0",
     "knex": "^0.20.13",
     "sqlite3": "^4.1.1"
   },
